--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
-    "svelte": "^3.54.0",
-    "vite": "^4.3.0",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
+    "svelte": "^3.54.0",
     "svelte-preprocess": "^5.0.3",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.3.0"
   },
   "type": "module"
 }
